tests/NormalTests/paczka1/small_fuzzy/19269878.err
Error in line 10: 0nr2K S910 71,7
Error in line 7: ls6pa4oKQ1 A92 25,7
